feat: add base components
- create shared module
- add base aplication styles

--- a/src/styles/settings/_settings.scss
+++ b/src/styles/settings/_settings.scss
@@ -3,3 +3,14 @@ $browser-context: 16px !default;
 $rem-baseline: $browser-context !default;
 $rem-fallback: false !default;
 $rem-px-only: false !default;
+
+$color-white: #ffffff;
+$color-seashell: #f1f1f1;
+$color-gallery: #ebebeb;
+$color-nobel: #b4b4b4;
+$color-rolling-stone: #737c84;
+$color-mine-shaft: #333333;
+
+$color-malibu: #69a3ff;
+$color-neon-carrot: #ff9632;
+$color-crimson: #ed1946;
