--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,7 +1,19 @@
 @import '../tools/tools';
 
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   width: 100%;
   height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: $default-font-family;
+  font-size: $browser-context;
+  background: $color-seashell;
 }
