style: improve page layout

--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -1,7 +1,5 @@
 <wn-page-header></wn-page-header>
 
-<main role="main">
+<main class="page-body" role="main">
   <router-outlet></router-outlet>
 </main>
-
-<wn-page-footer></wn-page-footer>
