--- a/src/styles/settings/_settings.scss
+++ b/src/styles/settings/_settings.scss
@@ -14,3 +14,5 @@ $color-mine-shaft: #333333;
 $color-malibu: #69a3ff;
 $color-neon-carrot: #ff9632;
 $color-crimson: #ed1946;
+
+$header-height: 54px;
