chore: sass lint

--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -2,7 +2,7 @@
 
 .page-body {
   height: 100vh;
-  padding: rem(32px + $header-height) rem(32px) rem(32px) rem(32px);
+  padding: rem(32px + $header-height) rem(32px) rem(32px);
 
   @media (min-width: rem(768px)) {
     padding: rem(96px);
